--- a/WillysReceiptParser.csproj
+++ b/WillysReceiptParser.csproj
@@ -2,17 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="DbSettings.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="DbSettings.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +21,12 @@
 
   <ItemGroup>
     <Folder Include="Repositories/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="wordlist.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
